web/skins/classic/css/base/views/timeline.css
#content {
    position: relative;
    text-align: center;
    border: 1px solid #666666;
    margin: 0 auto;
}

#header {
    display: flex;
    justify-content: space-between;
}

#header h2, #header a {
    line-height: 1.1;
    margin:5px 0 0 0;
}

#header #info, #header #headerButtons {
    display: flex;
    flex-direction: column;
}

#header #headerButtons {
    align-items: flex-end;
}

#title {
    position: relative;
    margin: 0 auto;
    color: #016A9D;
    height: 30px;
    font-size: 13px;
    font-weight: bold;
    line-height: 20px;
}

#topPanel {
    position: relative;
    min-height: 220px;
    margin: 4px auto 6px;
    display: block;
    width: 100%;
}
#topPanel:after {
  content: ".";
  display: block;
  height: 0;
    font-size: 0;
  clear: both;
  visibility: hidden;
}

#topPanel .imagePanel {
    text-align: right;
}

#topPanel .image {
    margin: 0 auto;
    text-align: right;
    margin-right: 2px;
    background-color: #eeeeee;
    border: 1px solid #c8c8c8;
    position: relative;
    width: 100%;
}

#topPanel .image img {
    width: auto;
    max-width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: 0 auto;
}

#topPanel #dataPanel {
    width: 45%;
    float: left;
    text-align: left;
    margin-left: 2px;
}

#topPanel #textPanel {
    text-align: left;
    width: 100%;
    margin: 0 auto;
    color: #016A9D;
    font-size: 11px;
    font-weight: bold;
    line-height: 14px;
    background-color: #eeeeee;
    border: 1px solid #c8c8c8;
    padding: 2px;
}

#topPanel #navPanel {
  float: left;
    width: 100%;
    height: 70px;
    margin: 4px auto;
}

#topPanel #navPanel input {
    background-color: #eeeeee;
    border: 1px solid #c8c8c8;
    padding: 5px;
}

#chartPanel {
    clear: both;
    position: relative;
    margin: 0 auto;
    display: block;
    width: 100%;
}

#chartPanel #chart {
    position: relative;
    border: 1px solid black;
    margin: 0 auto;
    z-index: 0;
}

#chartPanel #activity {
    position: absolute;
    top: 0;
    left: 0;
    text-align: center;
    border-bottom: 1px solid #cccccc;
    width: 100%;
}

#chartPanel div.activity {
    position: absolute;
    bottom: 0;
    z-index: 3;
    width: 0.17%;
}

#chartPanel .events {
    position: absolute;
    text-align: center;
    left: 0;
    width: 100%;
    background-color: #fcfcfc;
    border-bottom: 1px solid black;
}

#chartPanel .event {
    position: absolute;
    bottom: 0px;
    z-index: 3;
}

#chartLabels {
    margin: 25px auto 0;
    text-align: center;
    display: block;
    width: 100%;
}

#range {
    width: 30%;
    margin: 0 auto;
    color: #016A9D;
    font-size: 11px;
    font-weight: bold;
    line-height: 20px;
}

#key {
    float: right;
    margin-top: -4px;
    text-align: right;
}

span.keyEntry {
}

div.keyBox {
    position: relative;
  display: inline-block;
    border: 1px solid black;
    width: 16px;
    height: 16px;
    top: 4px;
    margin-left: 4px;
}

div.majGridX {
    position: absolute;
    z-index: 1;
    top: 0px;
    width: 1px;
    border-left: dotted 1px #cccccc;
}

div.majTickX {
    position: absolute;
    bottom: -7px;
    width: 1px;
    height: 7px;
    border-left: solid 1px black;
}

div.majLabelX {
    position: absolute;
    text-align: center;
    bottom: -20px;
    width: 50px;
    font-size: 9px;
    font-weight: normal;
}

div.majGridY {
    position: absolute;
    z-index: 1;
    left: 0px;
    height: 1px;
    border-top: dotted 1px #cccccc;
}

div.majTickY {
    position: absolute;
    left: -7px;
    height: 1px;
    width: 7px;
    border-top: solid 1px black;
}

div.majLabelY {
    position: absolute;
    text-align: right;
    left: -30px;
    width: 20px;
    font-size: 9px;
    font-weight: normal;
}

div.tlzoom {
    position: absolute;
    z-index: 2;
    bottom: 0px;
}

